# material_design_icons

./: Cargo.toml  build.rs
src/: lib.rs
